--- a/final/away.html
+++ b/final/away.html
@@ -71,7 +71,7 @@
 Note: I do not own any of the music. All rights reserved to artist Tyler Aucoin and producer Chris Piquette of Boundaries Studios, Providence, RI (2014). Away is available now on iTunes.</p>
 
 			  <h3>my role</h3>
-			  <h4>photo editing, album package design, CD design</h4>
+			  <h4>concept, photo editing, album package design, CD design</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/awayphotos/away1.jpg"> <img src="images/awayphotos/away1.jpg" alt="Full Artwork" /></a>
@@ -89,7 +89,7 @@ Note: I do not own any of the music. All rights reserved to artist Tyler Aucoin 
 
 <p>In keeping with the customer's expectations of competing companies brands, the identity of E Motion is meant to be bold, professional, and above all friendly. In a time when most modern corperations are impersonal and centered around economic metrics, this brand harkens back to a time of friendly neighborhood businesses. Being the center of the brand, its logo stands clean, legible, and emotive, with a nostalgic feel for neon signs.</p>
 			  <h3>my role</h3>
-			  <h4>photo editing, album package design, CD design</h4>
+			  <h4>concept, photo editing, album package design, CD design</h4>
 		  </div>
       </section>
 	  
