--- a/final/cage.html
+++ b/final/cage.html
@@ -68,7 +68,7 @@
 
 <p>Through a series of ripped pages juxtaposed next to those left in tact, 'Encage' presents both theorists' ideas one after the other in a form a action reaction dialogue. The stark, bold typography of the John Cage pages contrasts the classical page structure of those belonging to Schoenberg. Each ripped page was hand-dyed in a combination of tea and other substances to achieve an old-fashioned look and touch. The final page of the book is a pull-out, marking John Cage as the godfather of punk rock, a genre dedicated to musicians who have gone against traditions to create something new.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, hand-dying pages, jacket design, family tree design</h4>
+			  <h4>concept, research, page layout, text design, text editing, hand-dying pages, jacket design, family tree design</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/cagephotos/cage1.jpg"> <img src="images/cagephotos/cage1.jpg" alt="Encage Front Cover" /></a>
@@ -86,7 +86,7 @@
 
 <p>Through a series of ripped pages juxtaposed next to those left in tact, 'Encage' presents both theorists' ideas one after the other in a form a action reaction dialogue. The stark, bold typography of the John Cage pages contrasts the classical page structure of those belonging to Schoenberg. Each ripped page was hand-dyed in a combination of tea and other substances to achieve an old-fashioned look and touch. The final page of the book is a pull-out, marking John Cage as the godfather of punk rock, a genre dedicated to musicians who have gone against traditions to create something new.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, hand-dying pages, jacket design, family tree design</h4>
+			  <h4>concept, research, page layout, text design, text editing, hand-dying pages, jacket design, family tree design</h4>
 		  </div>
       </section>
 	  
