--- a/final/emotion.html
+++ b/final/emotion.html
@@ -68,7 +68,7 @@
 
 <p>In keeping with the customer's expectations of competing companies brands, the identity of E Motion is meant to be bold, professional, and above all friendly. In a time when most modern corperations are impersonal and centered around economic metrics, this brand harkens back to a time of friendly neighborhood businesses. Being the center of the brand, its logo stands clean, legible, and emotive, with a nostalgic feel for neon signs.</p>
 			  <h3>my role</h3>
-			  <h4>logo design, logo applications, brand guidelines, guideline manual design</h4>
+			  <h4>research, logo design, logo applications, magazine advertisements, brand guidelines, guideline manual design</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/emotionphotos/emotion0.jpg"> <img src="images/emotionphotos/emotion0.jpg" alt="Family Courtesy Car" /></a>
@@ -86,7 +86,7 @@
 
 <p>In keeping with the customer's expectations of competing companies brands, the identity of E Motion is meant to be bold, professional, and above all friendly. In a time when most modern corperations are impersonal and centered around economic metrics, this brand harkens back to a time of friendly neighborhood businesses. Being the center of the brand, its logo stands clean, legible, and emotive, with a nostalgic feel for neon signs.</p>
 			  <h3>my role</h3>
-			  <h4>logo design, logo applications, brand guidelines, guideline manual design</h4>
+			  <h4>research, logo design, logo applications, magazine advertisements, brand guidelines, guideline manual design</h4>
 		  </div>
       </section>
 	  
