--- a/final/first.html
+++ b/final/first.html
@@ -43,7 +43,7 @@
 
 <p>The video is a stop-motion animation comprised of over 300 still photos, and traces the theme of change through the metasymbol of the butterfly.</p>
 			  <h3>my role</h3>
-			  <h4>video direction, editing, and soundtrack, butterfly origami</h4>
+			  <h4>concept, video direction, editing, and soundtrack, butterfly origami</h4>
 		  </div>
 		  <div id="video-container">
 			  <iframe width="600" height="337" src="https://www.youtube.com/embed/Bih_fsSeqdI" frameborder="0" allowfullscreen></iframe>
@@ -61,7 +61,7 @@
 
 <p>The video is a stop-motion animation comprised of over 300 still photos, and traces the theme of change through the metasymbol of the butterfly.</p>
 			  <h3>my role</h3>
-			  <h4>video direction, editing, and soundtrack, butterfly origami</h4>
+			  <h4>concept, video direction, editing, and soundtrack, butterfly origami</h4>
 		  </div>
       </section>
 	  
