--- a/final/keats.html
+++ b/final/keats.html
@@ -62,7 +62,7 @@
 
 <p>John Keats spent his unfortunately brief life attempting to find an underlying truth to the world. While it has been said that as a Romantic Keats could not find truth in ugliness, no one has ever been attempted to define his truth in beauty as anything other than 'prettiness.' I brought out the fantastic quality of Keats's beauty to show how beauty represents the underlying truth to the world because it takes on a different form to each person that beholds it.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, analog and digital illustration, paint brush type</h4>
+			  <h4>concept, research, page layout, text design, analog and digital illustration, paint brush type</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/keatsphotos/keats1.jpg"> <img src="images/keatsphotos/keats1.jpg" alt="To Autumn Illustration" /></a>
@@ -80,7 +80,7 @@
 
 <p>John Keats spent his unfortunately brief life attempting to find an underlying truth to the world. While it has been said that as a Romantic Keats could not find truth in ugliness, no one has ever been attempted to define his truth in beauty as anything other than 'prettiness.' I brought out the fantastic quality of Keats's beauty to show how beauty represents the underlying truth to the world because it takes on a different form to each person that beholds it.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, analog and digital illustration, paint brush type</h4>
+			  <h4>concept, research, page layout, text design, analog and digital illustration, paint brush type</h4>
 		  </div>
       </section>
 	  
