--- a/final/mag.html
+++ b/final/mag.html
@@ -58,11 +58,11 @@
 		  <div id="paragraphs">
 			  <h1>Cupcheck</h1>
 			  <h2>print & web magazine</h2>
-<p>CUPCHECK was a school project to design a magazine that supports the sciences and humanities. As per the faux letter from the editor: "We are CUPCHECK magzine...we know you work, play, fight, self-medicate, and repeat. We know you're hyped about sports, and about life. And probably most importantly, we know you are not an idiot."</p>
+<p>CUPCHECK Sports Health and Science Magazine was designed as a sports magazine that better supports the sciences and humanities. As per the faux letter from the editor: "We are CUPCHECK magzine...we know you work, play, fight, self-medicate, and repeat. We know you're hyped about sports, and about life. And most importantly, we know you are not an idiot."</p>
 
-<p>The idea behind CUPCHECK is that a sports magazine can be fun, edgy, and also present intelligent articles that will provide athletes, coaches, and trainers with the necessary information to do what they do at the highest level possible.</p>
+<p>The purpose of CUPCHECK is to maintain that a sports magazine can be fun and edgy, while also presenting intelligent articles without patronizing the audience. As an informative piece, the magazine aims to provide athletes, coaches, and trainers with the latest scientific and medical knowledge to allow them to do what they do at the highest level possible.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, illustrations, photo editing</h4>
+			  <h4>concept, research, page layout, text design, text editing, illustrations, photo editing</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/magphotos1/mag1.jpg"> <img src="images/magphotos1/mag1.jpg" alt="Dark Days Image Detail" /></a>
@@ -76,11 +76,11 @@
 		  <div id="paragraphs2">
 			  <h1>Cupcheck</h1>
 			  <h2>print & web magazine</h2>
-<p>CUPCHECK was a school project to design a magazine that supports the sciences and humanities. As per the faux letter from the editor: "We are CUPCHECK magzine...we know you work, play, fight, self-medicate, and repeat. We know you're hyped about sports, and about life. And probably most importantly, we know you are not an idiot."</p>
+<p>CUPCHECK Sports Health and Science Magazine was designed as a sports magazine that better supports the sciences and humanities. As per the faux letter from the editor: "We are CUPCHECK magzine...we know you work, play, fight, self-medicate, and repeat. We know you're hyped about sports, and about life. And most importantly, we know you are not an idiot."</p>
 
-<p>The idea behind CUPCHECK is that a sports magazine can be fun, edgy, and also present intelligent articles that will provide athletes, coaches, and trainers with the necessary information to do what they do at the highest level possible.</p>
+<p>The purpose of CUPCHECK is to maintain that a sports magazine can be fun, edgy, while also presenting intelligent articles without patronizing the audience. As an informative piece, the magazine aims to provide athletes, coaches, and trainers with the latest scientific and medical knowledge to allow them to do what they do at the highest level possible.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, illustrations, photo editing</h4>
+			  <h4>concept, research, page layout, text design, text editing, illustrations, photo editing</h4>
 		  </div>
       </section>
 	  
