--- a/final/ten.html
+++ b/final/ten.html
@@ -62,7 +62,7 @@
 
 <p>The intent of the presentation of this booklet is to convince individuals of the importance of supporting AIDS research and providing medication and information to the people of African nations. It is my belief that only by helping developing nations early on can they become self-sufficient participants in global trade. Heavily based around statistical data, the booklet contains several information graphics to explain the data in the simplest possible way.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, vector illustrations, infographic design</h4>
+			  <h4>research, page layout, text design, text editing, vector illustrations, infographic design</h4>
 		  </div>
 		  <div id="images">
 <a class="fancybox1" rel="group" href="images/tenphotos/ten1.jpg"> <img src="images/tenphotos/ten1.jpg" alt="Ten Things Booklet Cover" /></a>
@@ -80,7 +80,7 @@
 
 <p>The intent of the presentation of this booklet is to convince individuals of the importance of supporting AIDS research and providing medication and information to the people of African nations. It is my belief that only by helping developing nations early on can they become self-sufficient participants in global trade. Heavily based around statistical data, the booklet contains several information graphics to explain the data in the simplest possible way.</p>
 			  <h3>my role</h3>
-			  <h4>page layout, text design, text editing, vector illustrations, infographic design</h4>
+			  <h4>research, page layout, text design, text editing, vector illustrations, infographic design</h4>
 		  </div>
       </section>
 	  
