--- a/final/index.html
+++ b/final/index.html
@@ -3,6 +3,7 @@
   <head>
 	  <title>Brendan Whipple A Design</title>
 	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
+	  <link rel="stylesheet" href="final.css" type="text/css" media="handheld">
   </head>
   <body>
 	  <header id="header">
