--- a/final/index.html
+++ b/final/index.html
@@ -12,7 +12,10 @@
 		  </h1>
 		  <h2>
 			  <a href="index.html"><img src="images/myLogo1.png" width="200px" /><a>
-		  <h2>
+		  </h2>
+		  <h3>
+			  <a href="index.html"><img src="images/myLogo1.png" width="500px" /><a>
+		  </h3>
 	  </div>
 	  <div class="title">
 		  <h2>
