--- a/final/index.html
+++ b/final/index.html
@@ -13,6 +13,8 @@
 		  <h2>
 			  <a href="index.html"><img src="images/myLogo1.png" width="200px" /><a>
 		  </h2>
+	  </div>
+	  <div class="logo2">
 		  <h3>
 			  <a href="index.html"><img src="images/myLogo1.png" width="500px" /><a>
 		  </h3>
