--- a/final/index.html
+++ b/final/index.html
@@ -4,6 +4,7 @@
 	  <title>Brendan Whipple A Design</title>
 	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
 	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
   </head>
   <body>
 	  <header id="header">
