--- a/final/keats.html
+++ b/final/keats.html
@@ -3,6 +3,8 @@
   <head>
 	  <title>To Steal the Basil Pot</title>
 	  <link rel="stylesheet" href="pages.css" type="text/css" media="screen">
+	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
 	  
 	  <!-- Add jQuery library -->
 	  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
