--- a/final/about.html
+++ b/final/about.html
@@ -3,6 +3,8 @@
   <head>
 	  <title>Brendan Whipple Portfolio</title>
 	  <link rel="stylesheet" href="about.css" type="text/css" media="screen">
+	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
   </head>
   <body>
 	  <header id="header">
