--- a/final/cage.html
+++ b/final/cage.html
@@ -3,7 +3,8 @@
   <head>
 	  <title>John Cage Book</title>
 	  <link rel="stylesheet" href="pages.css" type="text/css" media="screen">
-	  
+	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
 	  
 	  
 	  <!-- Add jQuery library -->
