--- a/final/first.html
+++ b/final/first.html
@@ -3,6 +3,9 @@
   <head>
 	  <title>First Things First Video</title>
 	  <link rel="stylesheet" href="pages.css" type="text/css" media="screen">
+	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
+	  
   </head>
   <body>
 	  <header id="header">
