--- a/final/work.html
+++ b/final/work.html
@@ -4,6 +4,8 @@
 	  <meta charset="UTF-8">
 	  <title>Brendan Whipple Portfolio</title>
 	  <link rel="stylesheet" href="work.css" type="text/css" media="screen">
+	  <meta name="viewport" content="width=device-width"> 
+	  <meta name="format-detection" content="telephone=no">
 
 	  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
 
