--- a/final/index.html
+++ b/final/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>Brendan Whipple A Design</title>
+	  <title>Brendan Whipple Design</title>
 	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
 	  <meta name="viewport" content="width=device-width"> 
 	  <meta name="format-detection" content="telephone=no">
@@ -9,12 +9,15 @@
   <body>
 	  <header id="header">
 	  <div class="logo">
-		  <h1>
-			  <a href="index.html"><img src="images/myLogo1.png" width="95px" /><a>
+		  <h1> 
+			  Brendan Whipple Design
 		  </h1>
 		  <h2>
-			  <a href="index.html"><img src="images/myLogo1.png" width="200px" /><a>
+			  <a href="index.html"><img src="images/myLogo1.png" width="95px" /><a>
 		  </h2>
+		  <h3>
+			  <a href="index.html"><img src="images/myLogo1.png" width="200px" /><a>
+		  </h3>
 	  </div>
 	  <div class="title">
 		  <h2>
