--- a/final/about.html
+++ b/final/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>Brendan Whipple Portfolio</title>
+	  <title>About Myself</title>
 	  <link rel="stylesheet" href="about.css" type="text/css" media="screen">
 	  <meta name="viewport" content="width=device-width"> 
 	  <meta name="format-detection" content="telephone=no">
