--- a/final/first.html
+++ b/final/first.html
@@ -56,8 +56,8 @@
 	  <section class="video-container2">
 		  <div id="video-container2">
 			  <iframe width="1000" height="562" src="https://www.youtube.com/embed/Bih_fsSeqdI" frameborder="0" allowfullscreen></iframe>
-		  </div>
-		  <div id="paragraphs2">
+	 	  </div>
+		  <div id="para2">
 			  <h1>First Things First</h1>
 			  <h2>stop motion animation</h2>
 <p>Based on the 'First Things First Manifesto' as laid out by a group of professional designers, this video speaks out for reorganizing our priorities away from advertising and toward moral and ethic public service work. It does not ask for an abolishment of advertising or capitalism as a whole, but a more simple belief that when man takes care of his fellow man first, then everyone is better prepared to live in a democratic society.</p>
